--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -14,13 +14,13 @@
         </UL>
 	{%- else %}
 	    {%- if states != None %}
-	    <H1>States: {{ states.name }}</H1>
-	    <H3>Cities</H3>
+	    <H1>State: {{ states.name }}</H1>
+	    <H3>Cities:</H3>
 	    <UL>
 	      {%- for c in states.cities|sort(attribute="name") %}
 	      <LI>{{ c.id }}: <B>{{ c.name }}</LI>
-	    </UL>
 	    {%- endfor %}
+	    </UL>
 	    {%- else %}
 	    <H1>Not found!</H1>
 	    {% endif %}
