--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -17,11 +17,11 @@
 	    <H1>State: {{ states.name }}</H1>
 	    <H3>Cities:</H3>
 	    <UL>
-	      {%- for c in states.cities|sort(attribute="name") %}
+	      {% for c in states.cities|sort(attribute="name") %}
 	      <LI>{{ c.id }}: <B>{{ c.name }}</LI>
-	    {%- endfor %}
+	    {% endfor %}
 	    </UL>
-	    {%- else %}
+	    {% else %}
 	    <H1>Not found!</H1>
 	    {% endif %}
 	{%- endif %}
